tests/snapshots/content__labels_are_found_by_id.snap
---
source: tests/content.rs
expression: response
---
{
  "data": {
    "label": {
      "color": "#1e88e5",
      "id": 1,
      "name": "Hírek"
    },
    "missing": null
  },
  "extensions": {
    "analyzer": {
      "complexity": 6,
      "depth": 2
    }
  }
}
